--- a/style.css
+++ b/style.css
@@ -1,1 +1,102 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+
+* {
+    margin: none;
+    padding: 0;
+}
+
+:root {
+    --dark-cyan: hsl(158, 36%, 37%);
+    --cream: hsl(30, 38%, 92%);
+    --very-dark-blue: hsl(212, 21%, 14%);
+    --dark-grayish-blue: hsl(228, 12%, 48%);
+    --white: hsl(0, 0%, 100%);
+    --font-size-paragraph: 14px;
+}
+
+body {
+    background-color: var(--cream);
+    padding-top: 30px;
+}
+
+section {
+    display: flex;
+    justify-content: center;
+}
+
+div.card {
+    background-color: var(--white);
+    border-radius: 15px;
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.493);
+    width: 90%;
+    height: 580px;
+}
+
+img#perfum {
+    width: 100%;
+    border-radius: 15px 15px 0 0;
+}
+
+div.container {
+    margin: 20px;
+}
+
+h3 {
+    font-size: 15px;
+    font-family: 'Poppins' , sans-serif;
+    font-weight: 200;
+    color: var(--dark-grayish-blue);
+}
+
+h1 {
+    font-size: 2.3rem;
+    margin: 0;
+}
+
+p {
+    color: var(--dark-grayish-blue);
+    font-size: var(--font-size-paragraph);
+}
+
+div.price {
+    display: flex;
+    flex-direction: row;
+}
+
+h1#big-price {
+    font-family: 'Fraunces' , serif;
+    color: var(--dark-cyan);
+    padding-right: 5%;
+
+}
+
+del {
+    color: var(--dark-grayish-blue);
+}
+
+button.buy-button {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    justify-content: center;
+    align-items: center;
+    outline: none;
+    border: none;
+    background-color: var(--dark-cyan);
+    border-radius: 10px;
+    margin-top: 5px;
+}
+
+button p {
+    color: var(--white);
+    font-weight: 560;
+    margin-left: 10px;
+
+}
+
+
+.attribution { font-size: 11px; text-align: center; margin-top: 5%;}
+.attribution a { color: hsl(228, 45%, 44%); }
