--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ div.card {
     border-radius: 15px;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.493);
     width: 90%;
-    height: 580px;
+    height: 45%;
 }
 
 img#mobile {
